force-app/main/default/objects/Case/fields/OrderLkp__c.field-meta.xml
<CustomField>
    <fullName>OrderLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordem</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Ordem não pertence a conta selecionada ou Duplicada</errorMessage>
        <filterItems>
            <field>Order__c.AccountLkp__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>