force-app/main/default/objects/Case/fields/OrderNumberFml__c.field-meta.xml
<CustomField>
    <fullName>OrderNumberFml__c</fullName>
    <formula>InvoiceLkp__r.RemittanceLkp__r.OrderLkp__r.OrderNumberTxt__c</formula>
    <label>Número do pedido</label>
    <type>Text</type>
</CustomField>