force-app/main/default/objects/Case/fields/OrderNumberTxt__c.field-meta.xml
<CustomField>
    <fullName>OrderNumberTxt__c</fullName>
    <label>Número de ordem</label>
    <length>30</length>
    <type>Text</type>
</CustomField>