force-app/main/default/objects/Case/fields/OrderSapCodeFml__c.field-meta.xml
<CustomField>
    <fullName>OrderSapCodeFml__c</fullName>
    <formula>OrderLkp__r.CustomIDTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código SAP Ordem</label>
    <type>Text</type>
</CustomField>