force-app/main/default/objects/Case/fields/OrderStatusFml__c.field-meta.xml
<CustomField>
    <fullName>OrderStatusFml__c</fullName>
    <formula>TEXT (OrderLkp__r.OrderStatusTxt__c)</formula>
    <label>Status do pedido</label>
    <type>Text</type>
</CustomField>