force-app/main/default/objects/Case/fields/OriginTxt__c.field-meta.xml
<CustomField>
    <fullName>OriginTxt__c</fullName>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fiscal</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Expedição</fullName>
            </value>
            <value>
                <fullName>Roteirização</fullName>
            </value>
            <value>
                <fullName>Faturamento</fullName>
            </value>
            <value>
                <fullName>Contratação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>