force-app/main/default/objects/Case/fields/OutdatedSheetBln__c.field-meta.xml
<CustomField>
    <fullName>OutdatedSheetBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planilha desatualizada</label>
    <type>Checkbox</type>
</CustomField>