force-app/main/default/objects/Case/fields/Pergunta1__c.field-meta.xml
<CustomField>
    <fullName>Pergunta1__c</fullName>
    <label>Porque deixou de comprar?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Motivo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atendimento Comercial / Sem Visita</fullName>
            </value>
            <value>
                <fullName>Compra com concorrente / Marca low price</fullName>
            </value>
            <value>
                <fullName>Compra de Distribuidor</fullName>
            </value>
            <value>
                <fullName>Crise/Estoque alto</fullName>
            </value>
            <value>
                <fullName>Demora na entrega</fullName>
            </value>
            <value>
                <fullName>Preço</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>