force-app/main/default/objects/Case/fields/PhoneTaxOfficeFml__c.field-meta.xml
<CustomField>
    <fullName>PhoneTaxOfficeFml__c</fullName>
    <formula>TaxOfficeLkp__r.PhoneTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone posto fiscal</label>
    <type>Text</type>
</CustomField>