force-app/main/default/objects/Case/fields/PriorityTxt__c.field-meta.xml
<CustomField>
    <fullName>PriorityTxt__c</fullName>
    <label>Prioridade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Médio</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Baixa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>