force-app/main/default/objects/Case/fields/Qual_nota_daria_ao_atendimento_Amanco__c.field-meta.xml
<CustomField>
    <fullName>Qual_nota_daria_ao_atendimento_Amanco__c</fullName>
    <inlineHelpText>Qual nota daria para o atendimento comercial da Mexichem?</inlineHelpText>
    <label>Nota ao atendimento comercial Mexichem?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Motivo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>