force-app/main/default/objects/Case/fields/ReferenceFml__c.field-meta.xml
<CustomField>
    <fullName>ReferenceFml__c</fullName>
    <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,4) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; ) &amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referência</label>
    <type>Text</type>
</CustomField>