force-app/main/default/objects/Case/fields/RegisterTxt__c.field-meta.xml
<CustomField>
    <fullName>RegisterTxt__c</fullName>
    <label>Registro</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ComplaintNatureTxt__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Devolução</fullName>
            </value>
            <value>
                <fullName>Reclamação</fullName>
            </value>
            <value>
                <fullName>Substituição</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>