force-app/main/default/objects/Case/fields/RemittanceInvoiceDateDte__c.field-meta.xml
<CustomField>
    <fullName>RemittanceInvoiceDateDte__c</fullName>
    <inlineHelpText>Informar data de conclusão nota fiscal aberta para solucionar o caso.</inlineHelpText>
    <label>Data nota fiscal remessa</label>
    <type>Date</type>
</CustomField>