force-app/main/default/objects/Case/fields/RemittanceInvoiceTxt__c.field-meta.xml
<CustomField>
    <fullName>RemittanceInvoiceTxt__c</fullName>
    <inlineHelpText>Informar nota fiscal atendida para solução do caso.</inlineHelpText>
    <label>Nota fiscal remessa</label>
    <length>6</length>
    <type>Text</type>
</CustomField>