force-app/main/default/objects/Case/fields/ReplacementOrderTxt__c.field-meta.xml
<CustomField>
    <fullName>ReplacementOrderTxt__c</fullName>
    <label>Ordem de reposição</label>
    <length>20</length>
    <type>Text</type>
</CustomField>