force-app/main/default/objects/Case/fields/RetainedTruckFml__c.field-meta.xml
<CustomField>
    <fullName>RetainedTruckFml__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <label>Caminhão retido (dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>