force-app/main/default/objects/Case/fields/SalesOrderStatusTxt__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderStatusTxt__c</fullName>
    <label>Status da ordem de venda</label>
    <length>25</length>
    <type>Text</type>
</CustomField>