force-app/main/default/objects/Case/fields/SampleShippingDateDte__c.field-meta.xml
<CustomField>
    <fullName>SampleShippingDateDte__c</fullName>
    <label>Data de envio da amostra</label>
    <type>Date</type>
</CustomField>