force-app/main/default/objects/Case/fields/SectorEmailEml__c.field-meta.xml
<CustomField>
    <fullName>SectorEmailEml__c</fullName>
    <label>Email do responsável pelo setor</label>
    <type>Email</type>
</CustomField>