force-app/main/default/objects/Case/fields/SellerEmailEml__c.field-meta.xml
<CustomField>
    <fullName>SellerEmailEml__c</fullName>
    <inlineHelpText>Email informado no cadastro do vendedor.</inlineHelpText>
    <label>Vendedor email</label>
    <type>Email</type>
</CustomField>