force-app/main/default/objects/Case/fields/SellerEmailIndicationFml__c.field-meta.xml
<CustomField>
    <fullName>SellerEmailIndicationFml__c</fullName>
    <formula>SellerIndicationLkp__r.SellerEmailEml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email vendedor (indicação)</label>
    <type>Text</type>
</CustomField>