force-app/main/default/objects/Case/fields/SellerIndicationLkp__c.field-meta.xml
<CustomField>
    <fullName>SellerIndicationLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indicação de vendedor</label>
    <referenceTo>SellerIndication__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>