force-app/main/default/objects/Case/fields/SellerInvoiceFml__c.field-meta.xml
<CustomField>
    <fullName>SellerInvoiceFml__c</fullName>
    <formula>InvoiceLkp__r.RemittanceLkp__r.OrderLkp__r.SellerLkp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendedor da nota fiscal</label>
    <type>Text</type>
</CustomField>