force-app/main/default/objects/Case/fields/SellerNameIndicationFml__c.field-meta.xml
<CustomField>
    <fullName>SellerNameIndicationFml__c</fullName>
    <formula>SellerIndicationLkp__r.SellerLkp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome vendedor (indicação)</label>
    <type>Text</type>
</CustomField>