force-app/main/default/objects/Case/fields/SendToLaboratoryBln__c.field-meta.xml
<CustomField>
    <fullName>SendToLaboratoryBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar para laboratório</label>
    <type>Checkbox</type>
</CustomField>