force-app/main/default/objects/Case/fields/ShipmentDateDte__c.field-meta.xml
<CustomField>
    <fullName>ShipmentDateDte__c</fullName>
    <label>Data de embarque</label>
    <type>Date</type>
</CustomField>