force-app/main/default/objects/Case/fields/ShipmentDateFml__c.field-meta.xml
<CustomField>
    <fullName>ShipmentDateFml__c</fullName>
    <formula>InvoiceLkp__r.ShipmentTransitFml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de embarque</label>
    <type>Date</type>
</CustomField>