force-app/main/default/objects/Case/fields/ShipmentDelayDaysFml__c.field-meta.xml
<CustomField>
    <fullName>ShipmentDelayDaysFml__c</fullName>
    <formula>InvoiceLkp__r.ShipmentDelayDaysFml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias atraso embarque</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>