force-app/main/default/objects/Case/fields/ShipmentDeliveredDte__c.field-meta.xml
<CustomField>
    <fullName>ShipmentDeliveredDte__c</fullName>
    <label>Mercadoria entregue</label>
    <type>Date</type>
</CustomField>