force-app/main/default/objects/Case/fields/ShipmentDeliveredFml__c.field-meta.xml
<CustomField>
    <fullName>ShipmentDeliveredFml__c</fullName>
    <formula>InvoiceLkp__r.ShipmentDeliveredFml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de entrega</label>
    <type>Date</type>
</CustomField>