force-app/main/default/objects/Case/fields/SinisterTxt__c.field-meta.xml
<CustomField>
    <fullName>SinisterTxt__c</fullName>
    <label>Sinistro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parcial</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>