force-app/main/default/objects/Case/fields/StartDateDte__c.field-meta.xml
<CustomField>
    <fullName>StartDateDte__c</fullName>
    <label>Inicio desejado</label>
    <type>Date</type>
</CustomField>