force-app/main/default/objects/Case/fields/Status_Fechamento__c.field-meta.xml
<CustomField>
    <fullName>Status_Fechamento__c</fullName>
    <description>Utilizado Process Builder [Caso] Status Fechamento.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Encerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>