force-app/main/default/objects/Case/fields/Sub_Motivo__c.field-meta.xml
<CustomField>
    <fullName>Sub_Motivo__c</fullName>
    <description>Sub campo que fica dentro do tipo de caso Informações Gerais.</description>
    <label>Sub Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprovante de Entrega</fullName>
            </value>
            <value>
                <fullName>Consulta Cadastral</fullName>
            </value>
            <value>
                <fullName>Cópia de pedido/NF</fullName>
            </value>
            <value>
                <fullName>Depósito identificado</fullName>
            </value>
            <value>
                <fullName>Indicação Revenda</fullName>
            </value>
            <value>
                <fullName>Inserir OC cliente</fullName>
            </value>
            <value>
                <fullName>NCM</fullName>
            </value>
            <value>
                <fullName>Pedido não inserido</fullName>
            </value>
            <value>
                <fullName>Solicitou tel. do vend.</fullName>
            </value>
            <value>
                <fullName>Televendas</fullName>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>