force-app/main/default/objects/Case/fields/SuframaDescriptionFml__c.field-meta.xml
<CustomField>
    <fullName>SuframaDescriptionFml__c</fullName>
    <formula>Account.SuframaCodeTxt__c</formula>
    <label>Inscrição Suframa</label>
    <type>Text</type>
</CustomField>