force-app/main/default/objects/Case/fields/TaxclassificationTxt__c.field-meta.xml
<CustomField>
    <fullName>TaxclassificationTxt__c</fullName>
    <label>Classificação fiscal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>