force-app/main/default/objects/Case/fields/TaxDueNmb__c.field-meta.xml
<CustomField>
    <fullName>TaxDueNmb__c</fullName>
    <label>Imposto devido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>