force-app/main/default/objects/Case/fields/TaxOfficeLkp__c.field-meta.xml
<CustomField>
    <fullName>TaxOfficeLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Posto fiscal</label>
    <referenceTo>FiscalOffice__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>