force-app/main/default/objects/Case/fields/TaxStatusTxt__c.field-meta.xml
<CustomField>
    <fullName>TaxStatusTxt__c</fullName>
    <label>Situação fiscal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contribuinte</fullName>
            </value>
            <value>
                <fullName>Não contribuinte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>