force-app/main/default/objects/Case/fields/TaxSubGroupFml__c.field-meta.xml
<CustomField>
    <fullName>TaxSubGroupFml__c</fullName>
    <formula>TEXT (Account.DescriptionSubfiscalGroupTxt__c)</formula>
    <label>Grupo subfiscal</label>
    <type>Text</type>
</CustomField>