force-app/main/default/objects/Case/fields/TecnicianLkp__c.field-meta.xml
<CustomField>
    <fullName>TecnicianLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Técnico</label>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>