force-app/main/default/objects/Case/fields/Tipo_de_Registro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Registro__c</fullName>
    <label>Tipo de Registro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0800</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Mídia Social</fullName>
            </value>
            <value>
                <fullName>Reclame aqui</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>