force-app/main/default/objects/Case/fields/TotalCostInvoiceFml__c.field-meta.xml
<CustomField>
    <fullName>TotalCostInvoiceFml__c</fullName>
    <formula>InvoiceLkp__r.TotalCostNmb__c</formula>
    <label>Valor total nota fiscal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>