force-app/main/default/objects/Case/fields/VisitDateDte__c.field-meta.xml
<CustomField>
    <fullName>VisitDateDte__c</fullName>
    <label>Data da visita do técnico</label>
    <type>Date</type>
</CustomField>