force-app/main/default/objects/Case/fields/VolumeCheckingBln__c.field-meta.xml
<CustomField>
    <fullName>VolumeCheckingBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conferência de volume</label>
    <type>Checkbox</type>
</CustomField>