force-app/main/default/objects/Case/recordTypes/AbatimentoCredito.recordType-meta.xml
<RecordType>
    <fullName>AbatimentoCredito</fullName>
    <active>true</active>
    <businessProcess>SAC Abatimento de crédito</businessProcess>
    <description>Abertura de caso referente a abatimento de crédito</description>
    <label>Abatimento de crédito</label>
</RecordType>