force-app/main/default/objects/Case/recordTypes/AdicioneTipodeCaso.recordType-meta.xml
<RecordType>
    <fullName>AdicioneTipodeCaso</fullName>
    <active>false</active>
    <businessProcess>SAC Informações gerais</businessProcess>
    <label>Adicione Tipo de Caso</label>
</RecordType>