force-app/main/default/objects/Case/recordTypes/AlteracaoPedido.recordType-meta.xml
<RecordType>
    <fullName>AlteracaoPedido</fullName>
    <active>true</active>
    <businessProcess>SAC Alteração de pedido</businessProcess>
    <description>Abertura de alteração de pedido</description>
    <label>Alteração de pedido</label>
</RecordType>