force-app/main/default/objects/Case/recordTypes/CaminhaoRetido.recordType-meta.xml
<RecordType>
    <fullName>CaminhaoRetido</fullName>
    <active>true</active>
    <businessProcess>SAC Caminhão retido</businessProcess>
    <description>Abertura de caso referente a caminhão retido em posto fiscal</description>
    <label>Caminhão retido</label>
</RecordType>