force-app/main/default/objects/Case/recordTypes/CancelamentoPedido.recordType-meta.xml
<RecordType>
    <fullName>CancelamentoPedido</fullName>
    <active>true</active>
    <businessProcess>SAC Cancelamento de pedido</businessProcess>
    <description>Abertura de caso para cancelamento de pedido</description>
    <label>Cancelamento de pedido</label>
</RecordType>