force-app/main/default/objects/Case/recordTypes/CartaCorrecao.recordType-meta.xml
<RecordType>
    <fullName>CartaCorrecao</fullName>
    <active>true</active>
    <businessProcess>SAC Carta de correção</businessProcess>
    <description>Abertura de caso para carta de correção</description>
    <label>Carta de correção</label>
</RecordType>