force-app/main/default/objects/Case/recordTypes/ConsultaPedido.recordType-meta.xml
<RecordType>
    <fullName>ConsultaPedido</fullName>
    <active>true</active>
    <businessProcess>SAC Consulta de pedido</businessProcess>
    <description>Abertura de consulta de pedido</description>
    <label>Consulta de pedido</label>
</RecordType>