force-app/main/default/objects/Case/recordTypes/Devolucao.recordType-meta.xml
<RecordType>
    <fullName>Devolucao</fullName>
    <active>true</active>
    <businessProcess>SAC Devolução</businessProcess>
    <description>Abertura de devolução de produto</description>
    <label>Devolução</label>
</RecordType>