force-app/main/default/objects/Case/recordTypes/DuvidasTributarias.recordType-meta.xml
<RecordType>
    <fullName>DuvidasTributarias</fullName>
    <active>true</active>
    <businessProcess>SAC Dúvidas tributárias</businessProcess>
    <description>Abertura caso referente a dúvidas tributárias</description>
    <label>Dúvidas tributárias</label>
</RecordType>