force-app/main/default/objects/Case/recordTypes/DuvidaTecnica.recordType-meta.xml
<RecordType>
    <fullName>DuvidaTecnica</fullName>
    <active>true</active>
    <businessProcess>SAC Dúvida técnica</businessProcess>
    <description>Abertura de dúvida técnica</description>
    <label>Dúvida técnica</label>
</RecordType>