force-app/main/default/objects/Case/recordTypes/ExtravioNotaFiscal.recordType-meta.xml
<RecordType>
    <fullName>ExtravioNotaFiscal</fullName>
    <active>true</active>
    <businessProcess>SAC Extravio de nota fiscal</businessProcess>
    <description>Abertura caso extravio de nota fiscal</description>
    <label>Extravio de nota fiscal</label>
</RecordType>