force-app/main/default/objects/Case/recordTypes/IndicacaoBNDES.recordType-meta.xml
<RecordType>
    <fullName>IndicacaoBNDES</fullName>
    <active>true</active>
    <businessProcess>SAC Indicação BNDS</businessProcess>
    <description>Solicitação de indicação BNDS</description>
    <label>Indicação BNDES</label>
</RecordType>