force-app/main/default/objects/Case/recordTypes/IndicacaoVendedor.recordType-meta.xml
<RecordType>
    <fullName>IndicacaoVendedor</fullName>
    <active>true</active>
    <businessProcess>SAC Indicação de vendedor</businessProcess>
    <description>Abertura de caso solicitando indicação de vendedor</description>
    <label>Indicação de vendedor</label>
</RecordType>