force-app/main/default/objects/Case/recordTypes/InformacoesGerais.recordType-meta.xml
<RecordType>
    <fullName>InformacoesGerais</fullName>
    <active>true</active>
    <businessProcess>SAC Informações gerais</businessProcess>
    <description>Abertura de caso informações gerais</description>
    <label>Informações gerais</label>
</RecordType>