force-app/main/default/objects/Case/recordTypes/Inserir_pedido.recordType-meta.xml
<RecordType>
    <fullName>Inserir_pedido</fullName>
    <active>true</active>
    <businessProcess>SAC Inserir pedido</businessProcess>
    <description>Inserir ordem de vendas internamente</description>
    <label>Inserir pedido</label>
</RecordType>