force-app/main/default/objects/Case/recordTypes/NegociacaoDebito.recordType-meta.xml
<RecordType>
    <fullName>NegociacaoDebito</fullName>
    <active>true</active>
    <businessProcess>SAC Negociação de débito</businessProcess>
    <description>Abertura de negociação de débito</description>
    <label>Negociação de débito</label>
</RecordType>