force-app/main/default/objects/Case/recordTypes/OutrosFinanceiro.recordType-meta.xml
<RecordType>
    <fullName>OutrosFinanceiro</fullName>
    <active>true</active>
    <businessProcess>SAC Outros financeiro</businessProcess>
    <description>Abertura de caso para o financeiro que não se enquadram nos outros tipos</description>
    <label>Outros - financeiro</label>
</RecordType>