force-app/main/default/objects/Case/recordTypes/PortalNeogrid.recordType-meta.xml
<RecordType>
    <fullName>PortalNeogrid</fullName>
    <active>true</active>
    <businessProcess>SAC Portal neogrid</businessProcess>
    <description>Abertura de caso referente ao portal neogrid</description>
    <label>Portal neogrid</label>
</RecordType>