force-app/main/default/objects/Case/recordTypes/ProdutoTrocado.recordType-meta.xml
<RecordType>
    <fullName>ProdutoTrocado</fullName>
    <active>true</active>
    <businessProcess>SAC Produto trocado</businessProcess>
    <description>Abertura de caso tipo produto trocado</description>
    <label>Produto trocado</label>
</RecordType>