force-app/main/default/objects/Case/recordTypes/Prorrogacao.recordType-meta.xml
<RecordType>
    <fullName>Prorrogacao</fullName>
    <active>true</active>
    <businessProcess>SAC Prorrogação</businessProcess>
    <description>Abertura de prorrogação</description>
    <label>Prorrogação</label>
</RecordType>