force-app/main/default/objects/Case/recordTypes/ProrrogacaoFluxoCaixa.recordType-meta.xml
<RecordType>
    <fullName>ProrrogacaoFluxoCaixa</fullName>
    <active>true</active>
    <businessProcess>SAC Prorrogação por fluxo de caixa</businessProcess>
    <description>Abertura de prorrogação por fluxo de caixa</description>
    <label>Prorrogação por fluxo de caixa</label>
</RecordType>