force-app/main/default/objects/Case/recordTypes/Reclamacao.recordType-meta.xml
<RecordType>
    <fullName>Reclamacao</fullName>
    <active>true</active>
    <businessProcess>SAC Reclamação</businessProcess>
    <description>Abertura de reclamação de produto</description>
    <label>Reclamação</label>
</RecordType>