force-app/main/default/objects/Case/recordTypes/ReclamacaoContraVendedor.recordType-meta.xml
<RecordType>
    <fullName>ReclamacaoContraVendedor</fullName>
    <active>true</active>
    <businessProcess>SAC Reclamação contra o vendedor</businessProcess>
    <description>Abertura de caso referente a reclamação contra o vendedor</description>
    <label>Reclamação contra o vendedor</label>
</RecordType>