force-app/main/default/objects/Case/recordTypes/Refaturamento.recordType-meta.xml
<RecordType>
    <fullName>Refaturamento</fullName>
    <active>true</active>
    <businessProcess>SAC Refaturamento</businessProcess>
    <description>Abertura de caso refaturamento</description>
    <label>Refaturamento</label>
</RecordType>