force-app/main/default/objects/Case/recordTypes/Reposicao.recordType-meta.xml
<RecordType>
    <fullName>Reposicao</fullName>
    <active>true</active>
    <businessProcess>SAC Reposição</businessProcess>
    <description>Abertura de reposição de volume ou item</description>
    <label>Reposição</label>
</RecordType>