force-app/main/default/objects/Case/recordTypes/Sinistro.recordType-meta.xml
<RecordType>
    <fullName>Sinistro</fullName>
    <active>true</active>
    <businessProcess>SAC Sinistro</businessProcess>
    <description>Abertura de caso onde houve sinistro</description>
    <label>Sinistro</label>
</RecordType>