force-app/main/default/objects/Case/recordTypes/SolicitacaoBoleto.recordType-meta.xml
<RecordType>
    <fullName>SolicitacaoBoleto</fullName>
    <active>true</active>
    <businessProcess>SAC Solicitação de boleto</businessProcess>
    <description>Abertura de caso referente a solicitação de boleto</description>
    <label>Solicitação de boleto</label>
</RecordType>