force-app/main/default/objects/Case/recordTypes/Substituicao.recordType-meta.xml
<RecordType>
    <fullName>Substituicao</fullName>
    <active>true</active>
    <businessProcess>SAC Substituição</businessProcess>
    <description>Abertura de substituição de produto</description>
    <label>Substituição</label>
</RecordType>