force-app/main/default/objects/Case/recordTypes/Sustacao.recordType-meta.xml
<RecordType>
    <fullName>Sustacao</fullName>
    <active>true</active>
    <businessProcess>SAC Sustação</businessProcess>
    <description>Abertura de caso referente a sustação</description>
    <label>Sustação</label>
</RecordType>