force-app/main/default/objects/Case/recordTypes/TranstornoNaEntrega.recordType-meta.xml
<RecordType>
    <fullName>TranstornoNaEntrega</fullName>
    <active>true</active>
    <businessProcess>SAC Transtorno na entrega</businessProcess>
    <description>Abertura de caso referente a transtorno na entrega</description>
    <label>Transtorno na entrega</label>
</RecordType>