force-app/main/default/objects/Case/validationRules/Caso_000.validationRule-meta.xml
<ValidationRule>
    <fullName>Caso_000</fullName>
    <active>true</active>
    <description>Bloqueio de criação de casos via email-to-case</description>
    <errorConditionFormula>ISPICKVAL(Origin, &apos;Emailtocase&apos;)</errorConditionFormula>
    <errorMessage>Bloqueada a criação de casos via email-to-case</errorMessage>
</ValidationRule>