force-app/main/default/objects/Case/validationRules/Caso_001.validationRule-meta.xml
<ValidationRule>
    <fullName>Caso_001</fullName>
    <active>true</active>
    <description>[Caso] Não permite alterar tipo de registro de caso.</description>
    <errorConditionFormula>ISCHANGED(RecordTypeId)</errorConditionFormula>
    <errorMessage>O campo &quot;Tipo de registro do caso&quot; não pode ser alterado.</errorMessage>
</ValidationRule>