force-app/main/default/objects/Case/validationRules/Caso_002.validationRule-meta.xml
<ValidationRule>
    <fullName>Caso_002</fullName>
    <active>true</active>
    <description>Bloqueio de criação de casos via email-to-case</description>
    <errorConditionFormula>RecordType.Name =&apos;&apos;</errorConditionFormula>
    <errorMessage>Bloqueada a criação de casos via email-to-case</errorMessage>
</ValidationRule>