force-app/main/default/objects/Case/validationRules/Caso_Bloquear_edicao_de_casos.validationRule-meta.xml
<ValidationRule>
    <fullName>Caso_Bloquear_edicao_de_casos</fullName>
    <active>false</active>
    <description>Regra para bloquear a edição de casos encerrados.</description>
    <errorConditionFormula>IF(
   ByPassBln__c = TRUE,
   AND( 
       $Profile.Name!= &apos;Interface Salesforce&apos;, 
       $Profile.Name!= &apos;Administrador do sistema&apos;,
    OR( 
       ISPICKVAL( PRIORVALUE(Status) , &apos;Encerrado&apos;),
       ISPICKVAL( PRIORVALUE(Status) , &apos;Cancelado&apos;)
      ) 
      ),
   FALSE
  )</errorConditionFormula>
    <errorMessage>O caso não poderá ser editado pois já está encerrado ou cancelado.</errorMessage>
</ValidationRule>