force-app/main/default/objects/Case/validationRules/Caso_Cancelamento_pedido_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Caso_Cancelamento_pedido_1</fullName>
    <active>true</active>
    <description>Regras referente a status do caso tipo Cancelamento de pedido 1.</description>
    <errorConditionFormula>IF(CONTAINS( $User.UIThemeDisplayed , &apos;Theme4d&apos;),
IF( 
ByPassBln__c = TRUE,
OR(
	AND(
		ISNEW(),
                $Profile.Name!= &apos;Interface Salesforce&apos;,
 $Profile.Name !=&apos;Coordenador SAC&apos;,
                $Profile.Name!= &apos;Administrador do sistema&apos;,
		RecordType.Name = &apos;Cancelamento de pedido&apos;,
		ISPICKVAL( Type , &apos;Cancelamento sem remessa&apos;),
		IF(NOT(ISPICKVAL(Status, &apos;Em análise&apos;)), true, false) 
	),
	AND(
		RecordType.Name = &apos;Cancelamento de pedido&apos;,
                $Profile.Name!= &apos;Interface Salesforce&apos;,
 $Profile.Name !=&apos;Coordenador SAC&apos;,
                $Profile.Name!= &apos;Administrador do sistema&apos;,
		ISPICKVAL( Type , &apos;Cancelamento sem remessa&apos;),
		IF( ISPICKVAL( PRIORVALUE(Status) , &apos;Em análise&apos;), 
		IF(NOT(OR(ISPICKVAL(Status, &apos;Em análise&apos;), 
		ISPICKVAL(Status, &apos;Encerrado&apos;), 
		ISPICKVAL(Status, &apos;Cancelado&apos;))) , true, false) , false) 
	)
), 
FALSE 
),
OR(
	AND(
		ISNEW(),
                $Profile.Name!= &apos;Interface Salesforce&apos;,
 $Profile.Name !=&apos;Coordenador SAC&apos;,
                $Profile.Name!= &apos;Administrador do sistema&apos;,
		RecordType.Name = &apos;Cancelamento de pedido&apos;,
		ISPICKVAL( Type , &apos;Cancelamento sem remessa&apos;),
		IF(NOT(ISPICKVAL(Status, &apos;Em análise&apos;)), true, false) 
	),
	AND(
		RecordType.Name = &apos;Cancelamento de pedido&apos;,
                $Profile.Name!= &apos;Interface Salesforce&apos;,
 $Profile.Name !=&apos;Coordenador SAC&apos;,
                $Profile.Name!= &apos;Administrador do sistema&apos;,
		ISPICKVAL( Type , &apos;Cancelamento sem remessa&apos;),
		IF( ISPICKVAL( PRIORVALUE(Status) , &apos;Em análise&apos;), 
		IF(NOT(OR(ISPICKVAL(Status, &apos;Em análise&apos;), 
		ISPICKVAL(Status, &apos;Encerrado&apos;), 
		ISPICKVAL(Status, &apos;Cancelado&apos;))) , true, false) , false) 
	)
)
)</errorConditionFormula>
    <errorMessage>Cancelamento de pedido 1: alteração de status não permitida.</errorMessage>
</ValidationRule>